  - Rewritten from scratch SMC detection algorithm
    - Implemented fine-grained SMC detection (on 128 byte granularity)
  - Bugfixes for CPU emulation correctness and stability
    - Fixed failures on Big Endian hosts !
  - Print detailed page walk information and attributes in
    internal debugger 'page' command
  - Updated/Fixed instrumentation callbacks

- Configure and compile
  - Added ability to configure CPUID stepping through .bochsrc.
    The default stepping value is 3.
  - Added ability to disable MONITOR/MWAIT support through .bochsrc
    CPUID option. The option is available only if compiled with
    --enable-monitor-mwait configure option.
  - Determine and select max physical address size automatically at
    configure time:
    - 32-bit physical address for 386/486 guests
    - 36-bit physical address for PSE-36 enabled Pentium guest
    - 40-bit physical address for PAE enabled P6 or later guests
  - Update config.guess/config.sub scripts to May 2010 revisions.
  - Added Bochs compilation timestamp after Bochs version string.

- GUI and display libraries (Volker)
  - Added new .bochsrc option to select mouse capture toggle method.
    In addition to the default Bochs method using the CTRL key and the
    middle mouse button there are now the choices:
    - CTRL+F10 (like DOSBox)
    - CTRL+ALT (like QEMU)
    - F12 (replaces win32 'legacyF12' option)

- ROM BIOS
  - Support for up to 2M ROM BIOS images

- I/O Devices
  - Fixes for emulated DHCP in eth_vnet (patch from @SF tracker)
  - Added support for VGA graphics mode with 400 lines (partial fix for SF bug #2948724)
  - NE2K: Fixed "send buffer" command issue on big endian hosts
  - USB
    - converted common USB code plus devices to the new 'usb_common' plugin
      Now the USB device classes no longer exist twice if both HC plugins are loaded.
    - added 'pseudo device' in common USB code for the device creation. This makes
      the HCs independent from the device specific code.