@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <assembly xmlns="urn:schemas-microsoft-com:asm.v1" manifestVersion="1.0">
 <assemblyIdentity
-    version="2.4.2.0"
+    version="2.4.5.0"
     processorArchitecture="X86"
     name="Bochs.Bochs.Bochs"
     type="win32"
@@ -13,7 +13,7 @@
             type="win32"
             name="Microsoft.Windows.Common-Controls"
             version="6.0.0.0"
-            processorArchitecture="X86"
+            processorArchitecture="amd64"
             publicKeyToken="6595b64144ccf1df"
             language="*"
         />
